fix: avoid smooth scroll behavior on mobile

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -42,10 +42,6 @@
     --radius: 0.5rem;
   }
 
-  html {
-    scroll-behavior: smooth;
-  }
-
   p, a {
     letter-spacing: 0.015em;
   }
